fix: fix overflow

--- a/src/assets/css/framework.css
+++ b/src/assets/css/framework.css
@@ -130,6 +130,19 @@ a {
     margin-left: auto;
     margin-right: auto;
 }
+
+.overflow-x-hidden {
+    overflow-x: hidden;
+}
+
+.overflow-y-hidden {
+    overflow-y: hidden;
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
 /* ==========================================================================
    4. Layout Helpers (No changes here)
    ========================================================================== */
